options spacing fix

--- a/css/options.css
+++ b/css/options.css
@@ -473,7 +473,8 @@ a.svg4:hover + .icon-text-4 {
 }
 .style-wrap {
     position: absolute;
-    top: 100px;
+    top: 300px;
+    left: 50px;
 }
 .style-text {
     position: relative;
